--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: ts-node-dev --respawn --transpile-only index.ts
+    command: npm run start
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - NODE_ENV=development
